--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%# TODO: Conditionally load this on the correct view, and load a real app, not `hello_react`  %>
     <%= javascript_pack_tag 'hello_react' %>
   </head>
 
