--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%# TODO: Conditionally a real app, not `hello_react`  %>
-    <%= javascript_pack_tag 'components/TodoApp' if params[:action] == 'my_todo_items' %>
+    <%= stylesheet_pack_tag 'application' %>
   </head>
 
   <body>
